# audioSplit

./: .gitignore  README.md  pyproject.toml  run.sh
common/: constants.py  interfaces.py  logging_utils.py
gateway/: app.py
gateway/static/: app.js  index.html  styles.css
prediction/: channel_fuser.py  channel_predictor.py  chroma_predict.py  convtasnet_predict.py  cqt_predict.py  fft_predict.py  openunmix_predict.py  temporal_predict.py  tone_identifier.py
test/integration/: test_chroma_service.py  test_gateway.py  validate_openunmix_inference.py  validate_tone_inference.py
test/unit/: test_base.py  test_channel_fuser.py  test_channel_predictor.py  test_cqt_service.py  test_fft_service.py  test_gateway.py  test_tone_identifier.py
transforms/: chroma.py  cqt.py  fft.py
