[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-separation"
version = "0.1.0"
description = "Distributed audio source separation pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "numpy>=1.26.0",
    "librosa>=0.10",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["common*", "transforms*", "gateway*", "prediction*"]
namespaces=true

[tool.pytest.ini_options]
testpaths = ["test"]
